--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    Hello!
+
+    <section>
+        <h1>Hello</h1>
+    </section>
 {% endblock %}
 
