--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,9 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-
-    <section>
-        <h1>Hello</h1>
-    </section>
+    {{ include(presentation_slides) }}
 {% endblock %}
 
