--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,7 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="{{ asset('css/app.css') }}" type="text/css">
     <link rel="stylesheet" href="{{ asset('reveal/css/reveal.css') }}">
-    <link rel="stylesheet" href="{{ asset('reveal/css/theme/black.css') }}" id="theme">
+    <script type="application/javascript">
+        var link = document.createElement('link');link.rel = 'stylesheet';link.type = 'text/css';
+        link.href = window.location.search.match(/print-pdf/gi) ? '{{ asset('reveal/css/print/pdf.css') }}' : '{{ asset('reveal/css/print/paper.css') }}';
+        document.getElementsByTagName('head')[0].appendChild(link);
+    </script>
+    <link rel="stylesheet" href="{{ asset('/reveal/css/theme/black.css') }}" id="theme">
     <link rel="stylesheet" href="{{ asset('reveal/lib/css/zenburn.css') }}">
     <!--[if lt IE 9]><script src="{{ asset('reveal/lib/js/html5shiv.js') }}"></script><![endif]-->
 </head>
@@ -23,11 +28,6 @@
 <script src="{{ asset('reveal/js/reveal.js') }}"></script>
 <script src="{{ asset('js/app.js') }}"></script>
 <script type="application/javascript">
-    var link  = document.createElement('link');
-    link.rel  = 'stylesheet';
-    link.type = 'text/css';
-    link.href = window.location.search.match(/print-pdf/gi) ? '{{ asset('reveal/css/print/pdf.css') }}' : '{{ asset('reveal/css/print/paper.css') }}';
-    document.getElementsByTagName('head')[0].appendChild(link);
     Reveal.initialize({
         controls: true,
         progress: true,
