--- a/assets/app.scss
+++ b/assets/app.scss
@@ -1,3 +1,46 @@
-body {
-    width: auto;
+* {
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+body#button {
+    background: black;
+}
+
+#help-me {
+    background: indianred;
+    border-radius: 100px;
+    border: inset 10px red;
+    color: white;
+    cursor: pointer;
+    font-size: 2.5em;
+    height: 200px;
+    left: 50%;
+    margin-left: -200px;
+    margin-top: -100px;
+    outline: none;
+    position: fixed;
+    text-shadow: 0 2px 10px #000;
+    top: 50%;
+    width: 400px;
+
+    &:active {
+        border-style: outset;
+        margin-top: -99px;
+        width: 398px;
+        margin-left: -199px;
+    }
+}
+
+#message {
+    color: #ccc;
+    position: fixed;
+    top: 0;
+    padding: 10px;
+    p {
+        padding-bottom: 5px;
+    }
 }
