--- a/templates/default/button.html.twig
+++ b/templates/default/button.html.twig
@@ -5,30 +5,16 @@
     <button id="help-me" type="button">
         Aidez-moi!
     </button>
+    <script src="{{ asset('js/socket.io.js') }}"></script>
     <script type="application/javascript">
         (function(d){
             var msgbox = d.getElementById('message');
+            var socket = io.connect(window.location.protocol+'//'+window.location.hostname+':9998');
             d.getElementById('help-me').addEventListener('click', function(){
-                ajax('POST', '{{ path('button') }}', null, function(response){
-
-                    var timeToRemove = 4000;
-                    console.info(response);
-                    var element = d.createElement('p');
-                    if ('1' === response) {
-                        element.innerHTML = 'Merci ! ☺ +5 secondes ajoutées à mon temps de parole ! ♥';
-                        element.style.color = '#lightgreen';
-                        timeToRemove = 8000;
-                    } else if ('0' === response) {
-                        element.innerHTML = 'Vous m\'avez déjà aidé, mais je ne peux pas non plus vous permettre de m\'octroyer des heures de bavardage...';
-                    } else {
-                        element.innerHTML = 'Vous avez peut-être appuyé trop vite !';
-                    }
-                    msgbox.appendChild(element);
-
-                    setTimeout(function() {
-                        //msgbox.removeChild(element);
-                    }, timeToRemove);
-                });
+                socket.emit('message', 'such wow!!!');
+            });
+            socket.on('message', function(msg) {
+                console.info(msg);
             });
         })(document);
     </script>
