--- a/templates/reveal.html.twig
+++ b/templates/reveal.html.twig
@@ -24,69 +24,7 @@
     </div>
 </div>
 
-<script src="{{ asset('reveal/lib/js/head.min.js') }}"></script>
-<script src="{{ asset('reveal/js/reveal.js') }}"></script>
-<script src="{{ asset('js/app.js') }}"></script>
-<script type="application/javascript">
-(function(d){
-    var autoSlide = 10000;
-    var internalTimer = autoSlide;
-    var timerStartedAt = Date.now();
-    var amount = 0;
+{% block javascripts %}{% endblock %}
 
-    Reveal.initialize({
-        width: "100%",
-        height: "100%",
-        margin: 0,
-        minScale: 1,
-        maxScale: 1,
-        controls: true,
-        progress: true,
-        history: true,
-        center: true,
-        autoSlide: autoSlide,
-        autoSlideMethod: checkNext,
-        overview: false,
-        transition: 'slide', // none/fade/slide/convex/concave/zoom
-        dependencies: [
-            { src: '{{ asset('reveal/lib/js/classList.js') }}', condition: function() { return !document.body.classList; } },
-            { src: '{{ asset('reveal/plugin/markdown/marked.js') }}', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-            { src: '{{ asset('reveal/plugin/markdown/markdown.js') }}', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-            { src: '{{ asset('reveal/plugin/highlight/highlight.js') }}', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-            { src: '{{ asset('reveal/plugin/search/search.js') }}', async: true },
-            { src: '{{ asset('reveal/plugin/zoom-js/zoom.js') }}', async: true },
-            { src: '{{ asset('reveal/plugin/notes/notes.js') }}', async: true }
-        ]
-    });
-
-    Reveal.addEventListener('slidechanged', function (event) {
-        ajax('POST', '{{ path('update_session_slide') }}', event.currentSlide.id);
-        internalTimer = autoSlide;
-        timerStartedAt = Date.now();
-    });
-    setInterval(function(){
-        ajax('GET', '{{ path('check_session_slide') }}', '', function(response){
-            timerStartedAt = parseInt(timerStartedAt, 10);
-            amount = (-1) * parseInt(response, 10);
-            console.info(amount);
-        });
-    }, 500);
-    setInterval(function(){
-        internalTimer -= 100;
-        if (internalTimer <= amount) {
-            Reveal.navigateNext();
-            internalTimer = autoSlide;
-        }
-    }, 100);
-
-    function checkNext() {
-        console.info('checking next', internalTimer, amount);
-        if (internalTimer <= amount) {
-            Reveal.navigateNext();
-            internalTimer = autoSlide;
-        }
-    }
-})(document);
-</script>
 </body>
 </html>
