--- a/templates/default/presentation.html.twig
+++ b/templates/default/presentation.html.twig
@@ -5,36 +5,13 @@
 {% endblock %}
 
 {% block javascripts %}
-
     <script src="{{ asset('reveal/lib/js/head.min.js') }}"></script>
     <script src="{{ asset('reveal/js/reveal.js') }}"></script>
     <script src="{{ asset('js/socket.io.js') }}"></script>
+    <script src="{{ asset('js/app.js') }}"></script>
     <script type="application/javascript">
         (function(d){
-            function ajax(method, url, params, callback) {
-                const request = new XMLHttpRequest();
-
-                request.open(method, url, true);
-
-                request.onload = function() {
-                    if (this.status >= 200 && this.status < 400) {
-                        if (typeof callback === 'function') {
-                            callback.apply(this, [this.response]);
-                        }
-                    } else {
-                        console.error(this);
-                        throw 'The server returned an error after an AJAX request.';
-                    }
-                };
-
-                request.onerror = function() {
-                    console.error(this);
-                    throw 'An error occured in an AJAX request.';
-                };
-
-                request.send(params);
-            }
-
+            var messageBlock = d.getElementById('messages');
             var autoSlide = 10000;
             var internalTimer = autoSlide;
             var timerStartedAt = Date.now();
@@ -107,12 +84,12 @@
                 }
             });
 
-            var socket = io.connect(window.location.protocol+'//'+window.location.hostname+':9998');
+            var socket = io.connect(window.location.protocol+'//'+window.location.hostname);
             socket.emit('subscribe', function(res){
                 console.info(arguments);
             });
             socket.on('message', function(msg) {
-                console.info(msg);
+                message(msg);
             });
         })(document);
     </script>
