--- a/assets/app.scss
+++ b/assets/app.scss
@@ -35,10 +35,11 @@ body#button {
     }
 }
 
-#message {
+#messages {
     color: #ccc;
     position: fixed;
     top: 0;
+    left: 0;
     padding: 10px;
     p {
         padding-bottom: 5px;
