Continue developing the interaction system

--- a/templates/default/button.html.twig
+++ b/templates/default/button.html.twig
@@ -9,13 +9,19 @@
     <script src="{{ asset('js/app.js') }}"></script>
     <script type="application/javascript">
         (function(d){
-            var msgbox = d.getElementById('message');
             var socket = io.connect(window.location.protocol+'//'+window.location.hostname);
             d.getElementById('help-me').addEventListener('click', function(){
-                socket.emit('message', 'such wow!!!');
+                var helped = localStorage.getItem('help') || [];
+                socket.emit('help', JSON.stringify(helped) || []);
+            });
+            socket.on('helpReturn', function(slideName){
+                let item = localStorage.getItem('help');
+                var helped = (item ? item.split(',') : []) || [];
+                helped.push(slideName);
+                localStorage.setItem('help', helped.join(','));
             });
             socket.on('message', function(msg) {
-                console.info(msg);
+                message(msg);
             });
         })(document);
     </script>
