--- a/templates/default/presentation.html.twig
+++ b/templates/default/presentation.html.twig
@@ -11,12 +11,6 @@
     <script src="{{ asset('js/app.js') }}"></script>
     <script type="application/javascript">
         (function(d){
-            var autoSlide = 10000;
-            var internalTimer = autoSlide;
-            var timerStartedAt = Date.now();
-            var amount = 0;
-            var pause = false;
-
             Reveal.initialize({
                 width: "100%",
                 height: "100%",
@@ -39,71 +33,7 @@
                     { src: '{{ asset('reveal/plugin/notes/notes.js') }}', async: true }
                 ]
             });
-
-            // In dev, allows resetting the list of asked help.
-            localStorage.setItem('help', '');
-
-            /**
-             * Events
-             */
-            Reveal.addEventListener('slidechanged', function (event) {
-                ajax('POST', '{{ path('update_session_slide') }}', event.currentSlide.id);
-                internalTimer = autoSlide;
-                timerStartedAt = Date.now();
-                updateSlide();
-            });
-
-            d.addEventListener('keydown', function(event){
-                if (event.keyCode === 65) {
-                    // key "a"
-                    pause = !pause;
-                    console.info(pause ? 'Pause !' : 'Reprise');
-                }
-            });
-
-            /**
-             * Socket interactions
-             */
-            var socket = io.connect(window.location.protocol+'//'+window.location.hostname);
-            socket.emit('subscribe', 'login');
-            socket.on('message', function(msg) {
-                message(msg);
-            });
-
-            /**
-             * Timer
-             */
-            setInterval(function(){
-                {#
-                ajax('GET', '{{ path('check_session_slide') }}', '', function(response){
-                    timerStartedAt = parseInt(timerStartedAt, 10);
-                    amount = (-1) * parseInt(response, 10);
-                    console.info(amount);
-                });
-                #}
-            }, 500);
-            setInterval(function(){
-                if (pause) {
-                    return;
-                }
-                internalTimer -= 100;
-                if (internalTimer <= amount) {
-                    Reveal.navigateNext();
-                    internalTimer = autoSlide;
-                }
-            }, 100);
-
-            function checkNext() {
-                console.info('checking next', internalTimer, amount);
-                if (internalTimer <= amount) {
-                    Reveal.navigateNext();
-                    internalTimer = autoSlide;
-                }
-            }
-
-            function updateSlide() {
-                socket.emit('update_slide', Reveal.getCurrentSlide().id);
-            }
+            initPresentation(d);
         })(document);
     </script>
 {% endblock %}
