Use reveal blood theme and highlightjs darcula theme

--- a/templates/default/presentation.html.twig
+++ b/templates/default/presentation.html.twig
@@ -9,8 +9,9 @@
         link.href = window.location.search.match(/print-pdf/gi) ? '{{ asset('reveal/css/print/pdf.css') }}' : '{{ asset('reveal/css/print/paper.css') }}';
         document.getElementsByTagName('head')[0].appendChild(link);
     </script>
-    <link rel="stylesheet" href="{{ asset('reveal/css/theme/black.css') }}" id="theme">
-    <link rel="stylesheet" href="{{ asset('reveal/lib/css/zenburn.css') }}">
+    {% set theme = app.request.query.get('theme', 'blood') %}
+    <link rel="stylesheet" href="{{ asset('reveal/css/theme/'~theme~'.css') }}" id="theme">
+    <link rel="stylesheet" href="{{ asset('css/hljs.darcula.css') }}">
     <!--[if lt IE 9]><script src="{{ asset('reveal/lib/js/html5shiv.js') }}"></script><![endif]-->
     {{ parent() }}
 {% endblock %}
