--- a/templates/default/presentation.html.twig
+++ b/templates/default/presentation.html.twig
@@ -1,20 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'reveal.html.twig' %}
 
 {% block title 'Présentation' %}
-
-{% block stylesheets %}
-    <link rel="stylesheet" href="{{ asset('reveal/css/reveal.css') }}">
-    <script type="application/javascript">
-        var link = document.createElement('link');link.rel = 'stylesheet';link.type = 'text/css';
-        link.href = window.location.search.match(/print-pdf/gi) ? '{{ asset('reveal/css/print/pdf.css') }}' : '{{ asset('reveal/css/print/paper.css') }}';
-        document.getElementsByTagName('head')[0].appendChild(link);
-    </script>
-    {% set theme = app.request.query.get('theme', 'blood') %}
-    <link rel="stylesheet" href="{{ asset('reveal/css/theme/'~theme~'.css') }}" id="theme">
-    <link rel="stylesheet" href="{{ asset('css/hljs.darcula.css') }}">
-    <!--[if lt IE 9]><script src="{{ asset('reveal/lib/js/html5shiv.js') }}"></script><![endif]-->
-    {{ parent() }}
-{% endblock %}
 
 {% block body %}
     <div class="reveal">
@@ -25,35 +11,6 @@
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('reveal/lib/js/head.min.js') }}"></script>
-    <script src="{{ asset('reveal/js/reveal.js') }}"></script>
-    <script src="{{ asset('js/socket.io.js') }}"></script>
     {{ parent() }}
-    <script type="application/javascript">
-        (function(d){
-            Reveal.initialize({
-                width: "100%",
-                height: "100%",
-                margin: 0,
-                minScale: 1,
-                maxScale: 1,
-                controls: true,
-                progress: true,
-                history: true,
-                center: true,
-                overview: false,
-                transition: 'slide', // none/fade/slide/convex/concave/zoom
-                dependencies: [
-                    { src: '{{ asset('reveal/lib/js/classList.js') }}', condition: function() { return !document.body.classList; } },
-                    { src: '{{ asset('reveal/plugin/markdown/marked.js') }}', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-                    { src: '{{ asset('reveal/plugin/markdown/markdown.js') }}', condition: function() { return !!document.querySelector( '[data-markdown]' ); } },
-                    { src: '{{ asset('reveal/plugin/highlight/highlight.js') }}', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-                    { src: '{{ asset('reveal/plugin/search/search.js') }}', async: true },
-                    { src: '{{ asset('reveal/plugin/zoom-js/zoom.js') }}', async: true },
-                    { src: '{{ asset('reveal/plugin/notes/notes.js') }}', async: true }
-                ]
-            });
-            initPresentation(d);
-        })(document);
-    </script>
+    <script type="text/javascript">(function(d){initPresentation(d);})(document);</script>
 {% endblock %}
