--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -15,7 +15,7 @@
         <div class="slides">
             <section>
                 <a href="{{ path('presentation', {'name': 'sf4'}) }}">
-                    <img src="{{ asset('orbitale.svg') }}" alt="Orbitale logo" class="noborder" style="width: 50%;">
+                    <img src="{{ asset('img/orbitale.svg') }}" alt="Orbitale logo" class="noborder" style="width: 50%;">
                 </a>
             </section>
         </div>
