--- a/assets/app.scss
+++ b/assets/app.scss
@@ -69,7 +69,7 @@ body {
     }
     section img {
         border-color: #222;
-        .noborder {
+        &.noborder {
             border: none transparent;
             max-width: 100%;
             background: transparent;
