--- a/assets/app.scss
+++ b/assets/app.scss
@@ -76,4 +76,10 @@ body {
             box-shadow: none;
         }
     }
+    .quote-source {
+        padding-right: 50px;
+        text-align: right;
+        font-size: 0.6em;
+        line-height: 0.6em;
+    }
 }
