--- a/assets/app.scss
+++ b/assets/app.scss
@@ -59,13 +59,18 @@ body {
 }
 
 .reveal {
-    p code {
-        background: #2b2b2b;
-        border-radius: 8px;
-        border: solid 2px #222222;
-        padding-left: 9px;
-        padding-right: 9px;
-        color: #a9b7c6;
+    p {
+        pre code {
+            display: block;
+        }
+        code {
+            background: #2b2b2b;
+            border-radius: 8px;
+            border: solid 2px #222222;
+            padding-left: 9px;
+            padding-right: 9px;
+            color: #a9b7c6;
+        }
     }
     section img {
         border-color: #222;
