Add slides number in debug mode

--- a/templates/reveal.html.twig
+++ b/templates/reveal.html.twig
@@ -33,6 +33,7 @@
                 maxScale: 1,
                 controls: true,
                 history: true,
+                slideNumber: {{ app.debug ? '"c/t"' : 'false' }},
                 rollingLinks: true,
                 overview: false,
                 transition: 'slide', // none/fade/slide/convex/concave/zoom
