--- a/templates/reveal.html.twig
+++ b/templates/reveal.html.twig
@@ -35,7 +35,7 @@
                 history: true,
                 slideNumber: {{ app.debug ? '"c/t"' : 'false' }},
                 rollingLinks: true,
-                overview: false,
+                overview: {{ app.debug ? 'true' : 'false' }},
                 transition: 'slide', // none/fade/slide/convex/concave/zoom
                 dependencies: [
                     { src: '{{ asset('reveal/lib/js/classList.js') }}', condition: function() { return !document.body.classList; } },
