--- a/assets/app.scss
+++ b/assets/app.scss
@@ -7,11 +7,11 @@
 }
 
 body {
-    &#body_reveal {
-        background: radial-gradient(circle, #333, #222);
-    }
     &#button {
         background: black;
+        #messages {
+            color: white;
+        }
     }
 }
 
@@ -41,7 +41,6 @@ body {
 }
 
 #messages {
-    color: #ccc;
     position: fixed;
     top: 0;
     left: 0;
