--- a/templates/reveal.html.twig
+++ b/templates/reveal.html.twig
@@ -11,7 +11,7 @@
         link.href = window.location.search.match(/print-pdf/gi) ? '{{ asset('reveal/css/print/pdf.css') }}' : '{{ asset('reveal/css/print/paper.css') }}';
         document.getElementsByTagName('head')[0].appendChild(link);
     </script>
-    {% set theme = app.request.query.get('theme', 'blood') %}
+    {% set theme = app.request.query.get('theme', 'sky') %}
     <link rel="stylesheet" href="{{ asset('reveal/css/theme/'~theme~'.css') }}" id="theme">
     <link rel="stylesheet" href="{{ asset('css/hljs.darcula.css') }}">
     <!--[if lt IE 9]><script src="{{ asset('reveal/lib/js/html5shiv.js') }}"></script><![endif]-->
