Add coolitude, WIP stats :)

--- a/templates/default/button.html.twig
+++ b/templates/default/button.html.twig
@@ -7,9 +7,8 @@
 
 {% block body %}
     <div id="messages"></div>
-    <button id="help-me" type="button">
-        Aidez-moi!
-    </button>
+    <button id="help-me" type="button">Rien compris…</button>
+    <button id="cool" type="button">Cool !</button>
 {% endblock %}
 
 {% block javascripts %}
