--- a/assets/app.scss
+++ b/assets/app.scss
@@ -15,11 +15,9 @@ body {
     }
 }
 
-#help-me {
-    background: indianred;
+#help-me,
+#cool {
     border-radius: 100px;
-    border: inset 10px red;
-    color: white;
     cursor: pointer;
     font-size: 2.5em;
     height: 200px;
@@ -29,7 +27,7 @@ body {
     outline: none;
     position: fixed;
     text-shadow: 0 2px 10px #000;
-    top: 50%;
+    top: 0;
     width: 400px;
 
     &:active {
@@ -38,6 +36,19 @@ body {
         width: 398px;
         margin-left: -199px;
     }
+}
+
+#help-me {
+    background: indianred;
+    border: inset 10px red;
+    color: white;
+    top: 30%;
+}
+#cool {
+    background: #5ccd5c;
+    border: inset 10px green;
+    color: white;
+    top: 60%;
 }
 
 #messages {
