--- a/templates/default/button.html.twig
+++ b/templates/default/button.html.twig
@@ -4,10 +4,8 @@
 
 {% block body_id 'button' %}
 
-
 {% block body %}
-    <div id="messages"></div>
-    <button id="help-me" type="button">Rien compris…</button>
+    <button id="help-me" type="button">Rien pigé…</button>
     <button id="cool" type="button">Cool !</button>
 {% endblock %}
 
