--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
 <body id="{% block body_id '' %}">
 <div id="messages"></div>
 {% block body %}{% endblock %}
-<script type="application/javascript">window.PORT = "{{ port }}";</script>
+<script type="application/javascript">window.SOCKET_PORT = "{{ socket_port }}";</script>
 {% block javascripts %}
     <script src="{{ asset('js/app.js') }}"></script>
 {% endblock %}
