Change green color for "cool" button

--- a/assets/app.scss
+++ b/assets/app.scss
@@ -51,7 +51,7 @@ body {
 }
 #cool {
     background: #5ccd5c;
-    border: inset 10px green;
+    border: inset 10px #0F0;
     color: white;
     top: 60%;
 }
