--- a/templates/reveal.html.twig
+++ b/templates/reveal.html.twig
@@ -4,13 +4,15 @@
 
 {% block body_id 'body_reveal' %}
 
+{% set is_pdf_print = app.request.requestUri matches '~print-pdf~' %}
+
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('reveal/css/reveal.css') }}">
-    <script type="application/javascript">
-        var link = document.createElement('link');link.rel = 'stylesheet';link.type = 'text/css';
-        link.href = window.location.search.match(/print-pdf/gi) ? '{{ asset('reveal/css/print/pdf.css') }}' : '{{ asset('reveal/css/print/paper.css') }}';
-        document.getElementsByTagName('head')[0].appendChild(link);
-    </script>
+    {% if is_pdf_print %}
+        <link rel="stylesheet" type="text/css" href="{{ asset('reveal/css/print/pdf.css') }}">
+    {% else %}
+        <link rel="stylesheet" type="text/css" href="{{ asset('reveal/css/print/paper.css') }}">
+    {% endif %}
     {% set theme = app.request.query.get('theme', 'sky') %}
     <link rel="stylesheet" href="{{ asset('reveal/css/theme/'~theme~'.css') }}" id="theme">
     <link rel="stylesheet" href="{{ asset('css/hljs.darcula.css') }}">
@@ -26,10 +28,10 @@
     <script type="application/javascript">
         (function(){
             Reveal.initialize({
-                width: "100%",
-                height: "100%",
-                margin: 0,
-                minScale: 1,
+                width: {{ is_pdf_print ? '1123' : '"100%"' }},
+                height: {{ is_pdf_print ? '794' : '"100%"' }},
+                margin: {{ is_pdf_print ? '0.2' : '0' }},
+                minScale: 0.8,
                 maxScale: 1,
                 controls: true,
                 history: true,
